@@ -12,7 +12,6 @@
 	<classpathentry kind="lib" path="lib/test/jpf-1.5.jar"/>
 	<classpathentry kind="lib" path="lib/test/junit-4.4.jar"/>
 	<classpathentry kind="lib" path="lib/test/mysql-connector-java-5.1.10.jar"/>
-	<classpathentry kind="lib" path="lib/test/postgis-1.3.2.jar"/>
 	<classpathentry kind="lib" path="lib/test/postgresql-8.3-603.jdbc4.jar"/>
 	<classpathentry kind="lib" path="lib/test/aopalliance-1.0.jar"/>
 	<classpathentry kind="lib" path="lib/test/commons-logging-1.1.1.jar"/>
@@ -28,5 +27,7 @@
 	<classpathentry kind="lib" path="lib/test/xercesImpl-2.9.1.jar"/>
 	<classpathentry kind="lib" path="lib/test/commons-codec-1.4.jar"/>
 	<classpathentry kind="lib" path="lib/test/commons-compress-1.0.jar"/>
+	<classpathentry kind="lib" path="lib/test/plexus-classworlds-2.2.2.jar"/>
+	<classpathentry kind="lib" path="lib/test/postgis-jdbc-1.3.3.jar"/>
 	<classpathentry kind="output" path="eclipse"/>
 </classpath>
