@@ -24,7 +24,9 @@
         </dependency>
         <dependency org="mysql" name="mysql-connector-java" rev="5.1.10" conf="default->default"/>
         <dependency org="org.apache.commons" name="commons-compress" rev="1.0" conf="compile->default"/>
-        <dependency org="org.postgis" name="postgis" rev="1.3.2" conf="compile->default"/>
+        <dependency org="org.postgis" name="postgis-jdbc" rev="1.3.3" conf="compile->default">
+        	<exclude module="postgis-stubs"/>
+        </dependency>
         <dependency org="org.springframework" name="spring-jdbc" rev="2.5.6.SEC01" conf="compile->default"/>
         <dependency org="commons-codec" name="commons-codec" rev="1.4" conf="compile->default"/>
         <dependency org="commons-dbcp" name="commons-dbcp" rev="1.2.2" conf="compile->default"/>
